--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-loading-bar": "0.0.7",
+    "react-notifications": "^1.4.3",
+    "react-router-dom": "^5.0.1",
+    "react-s-alert": "^1.4.1",
     "react-scripts": "3.0.1"
   },
   "scripts": {
